--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,8 +11,11 @@
 
 .ultima-hora-msg {
     height: 30px;
+    margin-bottom: 20px;
+}
+
+.alinhar-meio {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
 }
