--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 </mat-toolbar>
 <div class="container">
   <div>
-    <div class="ultima-hora-msg">
+    <div class="ultima-hora-msg alinhar-meio">
       <ng-container *ngIf="loadingUltimaMarcacao">
         <mat-spinner [diameter]="30" defaultColor="accent"></mat-spinner>
       </ng-container>
@@ -13,8 +13,10 @@
         {{msgUltimaHoraMarcada}}
       </ng-container>
     </div>
-    <button mat-raised-button color="primary" [disabled]="loading" (click)="marcarHora()">
-      {{loading ? 'Carregando' : 'Marcar hora'}}
-    </button>
+    <div class="alinhar-meio">
+      <button mat-raised-button color="primary" [disabled]="loading" (click)="marcarHora()">
+        {{loading ? 'Carregando' : 'Marcar hora'}}
+      </button>
+    </div>
   </div>
 </div>
