--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,12 +5,15 @@
 </mat-toolbar>
 <div class="container">
   <div>
-    <div class="ultima-hora-msg alinhar-meio">
+    <div class="ultima-hora-msg" [class.alinhar-meio]="loadingUltimaMarcacao">
       <ng-container *ngIf="loadingUltimaMarcacao">
         <mat-spinner [diameter]="30" defaultColor="accent"></mat-spinner>
       </ng-container>
       <ng-container *ngIf="!loadingUltimaMarcacao">
-        {{msgUltimaHoraMarcada}}
+        <p class="d-flex">Início: <span class="ml-auto">{{msgUltimaHoraMarcada?.entrada}}</span></p>
+        <p class="d-flex">Saída para almoço: <span class="ml-auto">{{msgUltimaHoraMarcada?.saidaAlmoco}}</span></p>
+        <p class="d-flex">Volta do almoço: <span class="ml-auto">{{msgUltimaHoraMarcada?.voltaAlmoco}}</span></p>
+        <p class="d-flex">Saída: <span class="ml-auto">{{msgUltimaHoraMarcada?.saida}}</span></p>
       </ng-container>
     </div>
     <div class="alinhar-meio">
