--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,11 @@
       <button mat-raised-button color="primary" [disabled]="loading" (click)="marcarHora()">
         {{loading ? 'Carregando' : 'Marcar hora'}}
       </button>
+      <a href="https://docs.google.com/spreadsheets/d/1qFgtn0MmrxysrKcFMqKdSPhX5zTQOadh-KP6kJU8Jok/edit#gid=0" target="_blank">
+        <button style="margin-left: 10px;" mat-raised-button color="warn">
+          Planilha
+        </button>
+      </a>
     </div>
   </div>
 </div>
